@@ -767,7 +767,7 @@ int ap_mpm_run(apr_pool_t *_pconf, apr_pool_t *plog, server_rec *s)
      */
     
     if (!is_graceful)
-        ap_create_scoreboard(pconf, SB_SHARED);
+        ap_run_pre_mpm(pconf, SB_SHARED);
 
     if (!is_graceful) {
         for (i = 0; i < HARD_SERVER_LIMIT; i++) {
