@@ -941,7 +941,7 @@ int ap_mpm_run(apr_pool_t *_pconf, apr_pool_t *plog, server_rec *s)
     SAFE_ACCEPT(accept_mutex_init(pconf));
 
     if (!is_graceful) {
-        ap_create_scoreboard(pconf, SB_NOT_SHARED);
+        ap_run_pre_mpm(pconf, SB_NOT_SHARED);
         memset(thread_control, 0, sizeof(thread_control));
     }
 
